CREATE TABLE IF NOT EXISTS "Users"
(
    `id`    BIGINT AUTO_INCREMENT PRIMARY KEY,
    `name`  VARCHAR NOT NULL
);

CREATE TABLE IF NOT EXISTS "TennisCourts"
(
    `id`        BIGINT AUTO_INCREMENT PRIMARY KEY,
    `courtType` INT NOT NULL
);